update all NBCR website references

--- a/_downloads/2009-12-17-download-rocks-5-3-rolled-tacos.html
+++ b/_downloads/2009-12-17-download-rocks-5-3-rolled-tacos.html
@@ -351,12 +351,12 @@ Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks
 <td></td>
 <td align="center">
       <font size="-2"><br />
-        <a href="http://sourceforge.net/projects/apbs">(nbcr)</a><br />
+        <a href="http://sourceforge.net/projects/apbs">sourceforge</a><br />
       </font>
     </td>
 <td align="center">
       <font size="-2"><br />
-        <a href="http://sourceforge.net/projects/apbs">(nbcr)</a><br />
+        <a href="http://sourceforge.net/projects/apbs">sourceforge</a><br />
       </font>
     </td>
 </tr>
