--- a/_downloads/2010-11-03-download-rocks-5-4-maverick.html
+++ b/_downloads/2010-11-03-download-rocks-5-4-maverick.html
@@ -342,7 +342,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 <td>Adaptive Poisson-Boltzmann Solver (packaged by NBCR)</td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;">
-<a href="http://www.poissonboltzmann.org/apbs">(nbcr)</a>
+<a href="http://sourceforge.net/projects/apbs">sourceforge</a><br />
 </td>
 </tr>
 
