--- a/_downloads/2011-05-03-older-downloads.html
+++ b/_downloads/2011-05-03-older-downloads.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Older Downloads
-date: 2011-05-03 18:38:49.000000000 -07:00
+date: 0000-05-03 18:38:49.000000000 -07:00
 categories: []
 tags: []
 status: publish
@@ -17,18 +17,6 @@ author:
   first_name: ''
   last_name: ''
 ---
-<ul>
-<li><a href="/wordpress/?page_id=123">Rocks 5.4 (Maverick) for Linux</a></li>
-<li><a href="/wordpress/?page_id=114">Rocks 5.3 (Rolled Tacos) for Linux</a></li>
-<li><a href="/wordpress/?page_id=115">Rocks 5.3 (Rolled Tacos) for Solaris</a>
-</li>
-<li><a href="/wordpress/?page_id=107">Rocks 5.2 (Chimichanga) for Linux</a></li>
-<li><a href="/wordpress/?page_id=108">Rocks 5.2 (Chimichanga) for Solaris</a>
-</li>
-<li><a href="/wordpress/?page_id=97">Rocks 5.1</a> - V.I</li>
-<li><a href="/wordpress/?page_id=82">Rocks 5.0</a> - V</li>
-<li><a href="/wordpress/?page_id=3">Rocks 4.3</a> - Mars Hill</li>
-<li><a href="/wordpress/?page_id=81">Rocks 4.2.1</a> - Cydonia</li>
-<li><a href="/ftp-site/pub/rocks/">Older</a></li>
-<li><a href="/wordpress/?page_id=105">Third-Party Rolls</a></li>
-</ul>
+
+<p>Versions odler than Rocks 5.1 are available from <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/">ftp site </a>
+
