--- a/_downloads/2012-10-23-download-rocks-6-1-emerald-boa-beta.html
+++ b/_downloads/2012-10-23-download-rocks-6-1-emerald-boa-beta.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Rocks 6.1 Beta (Emerald Boa)
+title: Rocks 6.1 (Emerald Boa) Beta
 date: 2012-10-23 13:21:49.000000000 -07:00
 categories: []
 tags: []
