--- a/_support/licensing.html
+++ b/_support/licensing.html
@@ -7,56 +7,62 @@ tags: []
 ---
 
 <h2> Trademark Licensing </h2>
-<p>The Rocks Logo and the name "Rocks" are registered trademarks with the United States Patent and Trademark Office.</p>
-<p>Commercial companies that wish to use the name "Rocks" or the logo in a product name or marketing material, are required to get written permission from the Technology Transfer and Intellectual Property Services Office at UCSD (email: invent@ucsd.edu).</p>
+<p>The Rocks Logo <img src="/assets/rocks.png" height="30"> and the name <strong>Rocks</strong> 
+   are registered trademarks with the United States Patent and Trademark Office.</p>
+<p>Commercial companies that wish to use the name <strong>Rocks</strong> or the logo in a 
+   product name or marketing material, are required to get written permission from the 
+   <a href="mailto:invent@ucsd.edu ">Technology Transfer and Intellectual Property Services Office at UCSD</a>
+</p>
+
 <h2> Rocks Copyright </h2>
 <pre>
-                                Rocks(r)
-                         www.rocksclusters.org
-                         
-Copyright (c) 2006 The Regents of the University of California. All
-rights reserved.
-
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are
-met:
-
-1. Redistributions of source code must retain the above copyright
-notice, this list of conditions and the following disclaimer.
-
-2. Redistributions in binary form must reproduce the above copyright
-notice unmodified and in its entirety, this list of conditions and the
-following disclaimer in the documentation and/or other materials provided 
-with the distribution.
-
-3. All advertising and press materials, printed or electronic, mentioning
-features or use of this software must display the following acknowledgement: 
-
-       'This product includes software developed by the Rocks 
-        Cluster Group at the San Diego Supercomputer Center at the
-        University of California, San Diego and its contributors.'
-
-4. Except as permitted for the purposes of acknowledgment in paragraph 3,
-neither the name or logo of this software nor the names of its
-authors may be used to endorse or promote products derived from this
-software without specific prior written permission.  The name of the
-software includes the following terms, and any derivatives thereof:
-'Rocks', 'Rocks Clusters', and 'Avalanche Installer'.  For licensing of 
-the associated name, interested parties should contact Technology 
-Transfer & Intellectual Property Services, University of California, 
-San Diego, 9500 Gilman Drive, Mail Code 0910, La Jolla, CA 92093-0910, 
-Ph: (858) 534-5815, FAX: (858) 534-7345, E-MAIL:invent@ucsd.edu
-
-THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS''
-AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
-THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS
-BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
-SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
-BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
-WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
-OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
-IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+                       Rocks(r)
+                www.rocksclusters.org
+                version 6.2 (SideWinder)
+ 
+ Copyright (c) 2000 - 2014 The Regents of the University of California.
+ All rights reserved.
+ 
+ Redistribution and use in source and binary forms, with or without
+ modification, are permitted provided that the following conditions are
+ met:
+ 
+ 1. Redistributions of source code must retain the above copyright
+ notice, this list of conditions and the following disclaimer.
+ 
+ 2. Redistributions in binary form must reproduce the above copyright
+ notice unmodified and in its entirety, this list of conditions and the
+ following disclaimer in the documentation and/or other materials provided 
+ with the distribution.
+ 
+ 3. All advertising and press materials, printed or electronic, mentioning
+ features or use of this software must display the following acknowledgement: 
+ 
+   "This product includes software developed by the Rocks(r)
+   Cluster Group at the San Diego Supercomputer Center at the
+   University of California, San Diego and its contributors."
+ 
+ 4. Except as permitted for the purposes of acknowledgment in paragraph 3,
+ neither the name or logo of this software nor the names of its
+ authors may be used to endorse or promote products derived from this
+ software without specific prior written permission.  The name of the
+ software includes the following terms, and any derivatives thereof:
+ "Rocks", "Rocks Clusters", and "Avalanche Installer".  For licensing of 
+ the associated name, interested parties should contact Technology 
+ Transfer & Intellectual Property Services, University of California, 
+ San Diego, 9500 Gilman Drive, Mail Code 0910, La Jolla, CA 92093-0910, 
+ Ph: (858) 534-5815, FAX: (858) 534-7345, E-MAIL:invent@ucsd.edu
+ 
+ THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS''
+ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+ THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+ PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS
+ BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
+ BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+ WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
+ OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
+ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 </pre>
