--- a/_downloads/third-party-rolls.html
+++ b/_downloads/third-party-rolls.html
@@ -18,7 +18,7 @@ your server.</li>
 </ol>
 <hr />
 
-<table width="90%" class="centered">
+<table width="80%" class="centered">
 <tbody>
 <tr>
 <th width="10%" align="left">roll name</th>
@@ -27,64 +27,64 @@ your server.</li>
 <th width="10%" align="center">x86_64</th>
 </tr>
 <tr>
-<td valign="top">absoft</td>
+<td valign="top"><span class="strongword">absoft</span></td>
 <td>Absoft Pro Fortran v10.1 Compiler Suite and associated libraries (packaged by StackIQ, Inc)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
 <tr>
-<td valign="top">cuda</td>
+<td valign="top"><span class="strongword">cuda</span></td>
 <td>NVIDIA's CUDA general purpose parallel computing tools to utilize the parallel compute engine in NVIDIA graphics
 processing units (GPUs) (packaged by StackIQ, Inc.)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
 <tr>
-<td valign="top">intel</td>
+<td valign="top"><span class="strongword">intel</span></td>
 <td>Intel C, C++, Fortran Compilers, Runtime Components, and Developer Tools (packaged by StackIQ, Inc)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
 <tr>
-<td valign="top">lsf</td>
+<td valign="top"><span class="strongword">lsf</span></td>
 <td>Platform LSF (Version 7 Update 4) Workload Manager (packaged by StackIQ, Inc.)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
 <tr>
-<td valign="top">mlnx-ofed</td>
+<td valign="top"><span class="strongword">mlnx-ofed</span></td>
 <td>OFED 1.4 InfiniBand stack and MPI layer (packaged by StackIQ, Inc)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
 <tr>
-<td valign="top">moab</td>
+<td valign="top"><span class="strongword">moab</span></td>
 <td>Cluster Resources Moab (v5.3.2) Cluster Suite (packaged by StackIQ, Inc)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
 <tr>
-<td valign="top">myrinet-10G</td>
+<td valign="top"><span class="strongword">myrinet-10G</span></td>
 <td>MX-10G 1.2.8, MPICH2-MX 1.0.7..2, MPICH-MX 1.2.7..7, and Open MPI v1.2.8 built and tuned for Myricom MX-10G hardware (packaged
 by Myricom, Inc)</td>
 <td valign="top" align="center"><a href="http://www.myri.com/scs/download-mx10g.html#roll">Myricom</a></td>
 <td valign="top" align="center"> <a href="http://www.myri.com/scs/download-mx10g.html#roll">Myricom</a></td>
 </tr>
 <tr>
-<td valign="top">myrinet-2G</td>
+<td valign="top"><span class="strongword">myrinet-2G</span></td>
 <td>MX-2G 1.2.8, MPICH2-MX 1.0.7..2, MPICH-MX 1.2.7..7, and Open MPI v1.2.8 built and tuned for Myricom MX-2G hardware (packaged
 by Myricom, Inc)</td>
 <td valign="top" align="center"> <a href="http://www.myri.com/scs/download-mx2g.html#roll">Myricom</a> </td>
 <td valign="top" align="center"> <a href="http://www.myri.com/scs/download-mx10g.html#roll">Myricom</a> </td>
 </tr>
 <tr>
-<td valign="top">pgi</td>
+<td valign="top"><span class="strongword">pgi</span></td>
 <td>Portland Group's C, C++, and Fortran Compilers (packaged by StackIQ)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
 <tr>
-<td valign="top">totalview</td>
+<td valign="top">totalview</span></td>
 <td>TotalView Debugger 8.6.0-2. (packaged by StackIQ, Inc)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
