--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,9 @@ layout: default
 title: Archive
 ---
 
-<h1>Posts {{ page.title }}</h1>
+<div class="border">
+  <h1>Posts {{ page.title }}</h1>
+</div>
 
 <!--
 <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
