add grants info

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ immensely in improving the state of the art in parallel tools.
 See <a href="/support/licensing">Rocks Licensing</a>.
 </p>
 
+<p>Rocks is supported by the National Science Foundation under Grants 
+<a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1032778">OCI-1032778</a> and 
+<a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0721623">OCI-0721623</a>.
+</p>
+
 <div class="border">
   <h1 class="page-heading">In the News </h1>
 </div>
