add docs and support pages

--- a/_docs/licensing.html
+++ b/_docs/licensing.html
@@ -4,6 +4,7 @@ title: Licensing
 date: 2007-01-04 17:38:32.000000000 -08:00
 categories: []
 tags: []
+weight: 20
 ---
 
 <h2> Trademark Licensing </h2>
