--- a/_docs/rocks-a-palooza.html
+++ b/_docs/rocks-a-palooza.html
@@ -3,6 +3,7 @@ layout: page
 title: Rocks-A-Palooza
 date: 2005-11-04 15:57:24.000000000 -08:00
 categories: []
+weight: 15
 ---
 
 <span class="page-heading strongword">Rocks-A-Palooza V</span> &nbsp; &nbsp;
