update missing, fix layout

--- a/_downloads/2009-12-17-download-rocks-5-3-rolled-tacos-solaris.html
+++ b/_downloads/2009-12-17-download-rocks-5-3-rolled-tacos-solaris.html
@@ -17,7 +17,7 @@ author:
   first_name: ''
   last_name: ''
 ---
-<h2>5.3 (Rolled Tacos) Menu for Solaris</h2>
+
 <h3>Building a Compute Cluster</h3>
 <p>
 These rolls are used to configure Solaris client nodes.</p>
@@ -34,73 +34,54 @@ Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks
 <tr>
 <th width="10%" align="left">roll name</th>
 <th width="50%" align="center">summary</th>
-<th width="10%" align="center"></th>
 <th width="10%" align="center">sunos</th>
 </tr>
 <tr>
-<td>base<br /><b>(required)</b></td>
+<td>base<b>(required)</b></td>
 <td>Rocks Base Roll</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/base-5.3-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/base-5.3-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/base-5.3-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/base-5.3-0.sunos.iso">http</a>
     </td>
 </tr>
 <tr>
-<td>jumpstart<br /><b>(required)</b></td>
+<td>jumpstart<b>(required)</b></td>
 <td>Adds JumpStart support to configure Solaris client nodes</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/jumpstart-5.3-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/jumpstart-5.3-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/jumpstart-5.3-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/jumpstart-5.3-0.sunos.iso">http</a>
     </td>
 </tr>
 <tr>
 <td>bio</td>
 <td>Bioinformatics utilities</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/bio-5.3-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/bio-5.3-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/bio-5.3-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/bio-5.3-0.sunos.iso">http</a>
     </td>
 </tr>
 <tr>
 <td>ganglia</td>
 <td>Cluster monitoring system</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/ganglia-5.3-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/ganglia-5.3-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/ganglia-5.3-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/ganglia-5.3-0.sunos.iso">http</a>
     </td>
 </tr>
 <tr>
-<td>hpc<br /><b></b></td>
+<td>hpc<b></b></td>
 <td>Rocks HPC Roll</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/hpc-5.3-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/hpc-5.3-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/hpc-5.3-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/hpc-5.3-0.sunos.iso">http</a>
     </td>
 </tr>
 <tr>
 <td>sge</td>
 <td>Sun Grid Engine job queueing system</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/sge-5.3-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/sge-5.3-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/sge-5.3-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/sge-5.3-0.sunos.iso">http</a>
     </td>
 </tr>
 </table>
