--- a/_downloads/2009-06-24-download-rocks-5-2-chimichanga-solaris.html
+++ b/_downloads/2009-06-24-download-rocks-5-2-chimichanga-solaris.html
@@ -33,96 +33,71 @@ Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks
 </table>
 <table width="100%">
 <tr>
-<th width="10%" align="left">roll name</th>
-<th width="50%" align="center">summary</th>
-<th width="10%" align="center"></th>
-<th width="10%" align="center">sunos</th>
+<th width="20%" align="left">roll name</th>
+<th width="60%" align="center">summary</th>
+<th width="20%" align="center">sunos</th>
 </tr>
 <tr>
-<td>base<br /><b>(required)</b></td>
+<td>base <b>(required)</b></td>
 <td>Rocks Base Roll</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/base-5.2-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/base-5.2-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/base-5.2-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/base-5.2-0.sunos.iso">http</a><br />
     </td>
 </tr>
 <tr>
-<td>jumpstart<br /><b>(required)</b></td>
+<td>jumpstart <b>(required)</b></td>
 <td>Adds JumpStart support to configure Solaris client nodes</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/jumpstart-5.2.1-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/jumpstart-5.2.1-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/jumpstart-5.2.1-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/jumpstart-5.2.1-0.sunos.iso">http</a><br />
     </td>
 </tr>
 <tr>
 <td>bio</td>
 <td>Bioinformatics utilities</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/bio-5.2-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/bio-5.2-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/bio-5.2-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/bio-5.2-0.sunos.iso">http</a><br />
     </td>
 </tr>
 <tr>
 <td>ganglia</td>
 <td>Cluster monitoring system</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/ganglia-5.2-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/ganglia-5.2-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/ganglia-5.2-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/ganglia-5.2-0.sunos.iso">http</a><br />
     </td>
 </tr>
 <tr>
 <td>hpc<br /><b></b></td>
 <td>Rocks HPC Roll</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/hpc-5.2-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/hpc-5.2-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/hpc-5.2-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/hpc-5.2-0.sunos.iso">http</a><br />
     </td>
 </tr>
 <tr>
 <td>java</td>
 <td>Sun Java SDK and JVM</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/java-5.2-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/java-5.2-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/java-5.2-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/java-5.2-0.sunos.iso">http</a><br />
     </td>
 </tr>
 <tr>
 <td>sge</td>
 <td>Sun Grid Engine job queueing system</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/sge-5.2-0.sunos.iso">(ftp)</a><br />
-        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/sge-5.2-0.sunos.iso">(http)</a><br />
-      </font>
+        <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/sunos/sge-5.2-0.sunos.iso">ftp</a>
+        <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/sunos/sge-5.2-0.sunos.iso">http</a><br />
     </td>
 </tr>
 <tr>
 <td>sunstudio12u1</td>
 <td>Sun Studio 12 Update 1 software for Solaris & Linux platforms. C, C++, Fortran compilers, math libraries, and performance analysis tools w/ MPI support</td>
-<td></td>
 <td align="center">
-      <font size="-2"><br />
-        <a href="https://cds.sun.com/is-bin/INTERSHOP.enfinity/WFS/CDS-CDS_SMI-Site/en_US/-/USD/ViewProductDetail-Start?ProductRef=SS12U1-R52-G-F@CDS-CDS_SMI">(sun)</a><br />
-      </font>
+        <a href="https://cds.sun.com/is-bin/INTERSHOP.enfinity/WFS/CDS-CDS_SMI-Site/en_US/-/USD/ViewProductDetail-Start?ProductRef=SS12U1-R52-G-F@CDS-CDS_SMI">sun</a><br />
     </td>
 </tr>
 </table>
