add NSF logo to main page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ See <a href="/support/licensing">Rocks Licensing</a>.
 <p>Rocks is supported by the National Science Foundation under Grants 
 <a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1032778">OCI-1032778</a> and 
 <a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0721623">OCI-0721623</a>.
+<img class="" src="/assets/nsf_logo.png" alt="" />
 </p>
 
 <div class="border">
