--- a/_downloads/2009-06-24-download-rocks-5-2-chimichanga-solaris.html
+++ b/_downloads/2009-06-24-download-rocks-5-2-chimichanga-solaris.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Chimichanga (5.2) for Solaris
+title: Rocks 5.2 Chimichanga for Solaris
 date: 2009-06-24 13:25:54.000000000 -07:00
 categories: []
 tags: []
