--- a/_downloads/2009-12-17-download-rocks-5-3-rolled-tacos-solaris.html
+++ b/_downloads/2009-12-17-download-rocks-5-3-rolled-tacos-solaris.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Rocks 5.3 (Rolled Tacos) for Solaris
+title: Rocks 5.3 Rolled Tacos for Solaris
 date: 2009-12-17 15:12:02.000000000 -08:00
 categories: []
 tags: []
