--- a/_downloads/2010-11-03-download-rocks-5-4-maverick.html
+++ b/_downloads/2010-11-03-download-rocks-5-4-maverick.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Rocks Maverick (5.4) for Linux
+title: Rocks 5.4 Maverick
 date: 2010-11-03 09:48:52.000000000 -07:00
 categories: []
 tags: []
@@ -17,7 +17,7 @@ Base, Kernel/Boot, Web Server, Service Pack and all of the OS rolls.</p>
 <p>Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/md5sum.txt">MD5 checksums</a>
 for all the rolls you download.</p>
 
-
+<hr />
 <table width="100%">
 <tbody>
 <tr>
@@ -28,11 +28,11 @@ src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt=""
 </tbody>
 </table>
 
-<table border="1" width="100%">
+<table border="0" width="100%">
 <tbody>
 <tr>
-<th style="text-align: center;" width="50%">CDs</th>
-<th style="text-align: center;" width="50%">jumbo (DVD)</th>
+<th style="text-align: center;" width="40%">CDs</th>
+<th style="text-align: center;" width="60%">jumbo (DVD)</th>
 </tr>
 <tr>
 <td style="text-align: center;">Kernel/Boot Roll
@@ -104,6 +104,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 </table>
 
 <p>&nbsp;</p>
+<hr />
 <table width="100%">
 <tbody>
 <tr>
@@ -113,11 +114,11 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 </tbody>
 </table>
 
-<table style="text-align: center;" border="1" width="100%">
+<table style="text-align: center;" border="0" width="100%">
 <tbody>
 <tr>
-<th style="text-align: center;" width="50%">CDs</th>
-<th style="text-align: center;" width="50%">jumbo (DVD)</th>
+<th style="text-align: center;" width="40%">CDs</th>
+<th style="text-align: center;" width="60%">jumbo (DVD)</th>
 </tr>
 <tr>
 <td style="text-align: center;">Kernel/Boot Roll
@@ -188,6 +189,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 </table>
 
 <p>&nbsp;</p>
+<hr />
 <table width="100%">
 <tbody>
 <tr>
@@ -196,17 +198,17 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 </tbody>
 </table>
 
-<table width="100%" border="1">
+<table width="100%" border="0">
 <tbody>
 <tr>
-<th style="text-align: left;" width="14%">roll name</th>
-<th style="text-align: center;" width="60%">summary</th>
-<th style="text-align: center;" width="13%">i386</th>
+<th style="text-align: left;" width="20%">roll name</th>
+<th style="text-align: center;" width="57%">summary</th>
+<th style="text-align: center;" width="10%">i386</th>
 <th style="text-align: center;" width="13%">x86_64</th>
 </tr>
 
 <tr>
-<td>base<br /> <strong>(required)</strong></td>
+<td>base <strong>(required)</strong></td>
 <td>Rocks Base Roll</td>
 <td style="text-align: center;">
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/base-5.4-0.i386.disk1.iso">ftp</a>
@@ -219,7 +221,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 </tr>
 
 <tr>
-<td>kernel<br /> <strong>(required)</strong></td>
+<td>kernel <strong>(required)</strong></td>
 <td>Rocks Bootable Kernel Roll</td>
 <td style="text-align: center;">
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/kernel-5.4-0.i386.disk1.iso">ftp</a>
@@ -232,7 +234,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 </tr>
 
 <tr>
-<td rowspan="9">os<br /> <strong>(required)</strong></td>
+<td rowspan="9">os <strong>(required)</strong></td>
 <td colspan="3">CentOS 5 (you may also use your own Red Hat Enterprise Linux 5 media)</td>
 </tr>
 
@@ -243,8 +245,8 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk1.iso">http</a>
 </td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk1.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk1.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk1.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk1.iso">http</a>
 </td>
 </tr>
 
@@ -255,77 +257,77 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk2.iso">http</a>
 </td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk2.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk2.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk2.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk2.iso">http</a>
 </td>
 </tr>
 
 <tr>
 <td style="text-align: center;">cd 3</td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk3.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk3.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk3.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk3.iso">http</a>
 </td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk3.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk3.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk3.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk3.iso">http</a>
 </td>
 
 <tr>
 <td style="text-align: center;">cd 4</td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk4.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk4.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk4.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk4.iso">http</a>
 </td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk4.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk4.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk4.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk4.iso">http</a>
 </td>
 
 <tr>
 <td style="text-align: center;">cd 5</td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk5.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk5.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk5.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk5.iso">http</a>
 </td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk5.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk5.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk5.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk5.iso">http</a>
 </td>
 
 <tr>
 <td style="text-align: center;">cd 6</td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk6.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk6.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk6.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk6.iso">http</a>
 </td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk6.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk6.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk6.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk6.iso">http</a>
 </td>
 
 <tr>
 <td style="text-align: center;">cd 7</td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk7.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk7.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk7.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk7.iso">http</a>
 </td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk7.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk7.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk7.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk7.iso">http</a>
 </td>
 
 <tr>
 <td style="text-align: center;">cd 8</td>
 <td></td>
 <td style="text-align: center;" valign="top">
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk8.iso">ftp</a><br />
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk8.iso">http</a><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk8.iso">ftp</a>
+<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk8.iso">http</a>
 </td>
 </tr>
 
 <tr>
-<td>service-pack<br /> <strong>(required)</strong></td>
+<td>service-pack <strong>(required)</strong></td>
 <td>Service Pack for 5.4</td>
 <td style="text-align: center;">
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/service-pack-5.4.2-1.i386.disk1.iso">ftp</a>
@@ -342,7 +344,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 <td>Adaptive Poisson-Boltzmann Solver (packaged by NBCR)</td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;">
-<a href="http://sourceforge.net/projects/apbs">sourceforge</a><br />
+<a href="http://sourceforge.net/projects/apbs">sourceforge</a>
 </td>
 </tr>
 
@@ -418,7 +420,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/sge-5.4-0.i386.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/sge-5.4-0.i386.disk1.iso">http</a>
 </td>
-<td style="text-align: center;"><span><br />
+<td style="text-align: center;"><span>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/sge-5.4-0.x86_64.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/sge-5.4-0.x86_64.disk1.iso">http</a>
 </td>
