--- a/_downloads/2012-04-01-download-rocks-5-5-6-0-mamba-beta.html
+++ b/_downloads/2012-04-01-download-rocks-5-5-6-0-mamba-beta.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Rocks 5.5/6.0 (Mamba) Beta
+title: Rocks 5.5/6.0 Mamba (beta)
 date: 2012-04-01 22:31:50.000000000 -07:00
 categories: []
 tags: []
@@ -17,3 +17,5 @@ author:
   first_name: ''
   last_name: ''
 ---
+
+Please see the production release.
