--- a/_downloads/2012-11-29-download-rocks-6-1-emerald-boa.html
+++ b/_downloads/2012-11-29-download-rocks-6-1-emerald-boa.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Rocks-6.1 (Emerald Boa)
+title: Rocks 6.1 Emerald Boa (CentOS 6.3)
 date: 2012-11-29 16:02:16.000000000 -08:00
 categories: []
 tags: []
@@ -247,6 +247,7 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
 <tr>
 <td>kvm</td>
 <td>Support for building KVM VMs on cluster nodes</td>
+<td></td>
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/kvm-6.1-0.x86_64.disk1.iso">ftp</a>      
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/kvm-6.1-0.x86_64.disk1.iso">http</a></td>
 <td></td>
