--- a/_downloads/2014-04-15-download-rocks-6-1-1-sand-boa.html
+++ b/_downloads/2014-04-15-download-rocks-6-1-1-sand-boa.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Rocks 6.1.1 (Sand Boa)
+title: Rocks 6.1.1 Sand Boa (CentOS 6.5)
 date: 2014-04-15 21:01:51.000000000 -07:00
 categories: []
 tags: []
