--- a/_downloads/2015-05-11-download-rocks-6-2-sidewinder.html
+++ b/_downloads/2015-05-11-download-rocks-6-2-sidewinder.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Rocks 6.2 (Sidewinder)
+title: Rocks 6.2 Sidewinder (CentOS 6.6)
 date: 2015-05-11 10:01:38.000000000 -07:00
 categories: []
 tags: []
